Course, Department, Semester Schema Created, Course CRUD completed

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
     "ConnectionStrings": {
-        "Local": "Server=.;Database=Payday-DHACity;User Id=sa;Password=fox$fox12;Trusted_Connection=true" 
+        "Local": "Server=.\\SQLEXPRESS01;Database=ESA;Trusted_Connection=true;" 
     },
   "AuthSettings": {
     "Key": "Foxitltd_12345678",
